# python-astropy-extension

./: .gitignore  .pre-commit-config.yaml  AI_CONTEXT.md  CONTRIBUTING.md  README-jp.md  README.md  UPDATE_CHECKLIST.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dev-charter-check.yml
astropy_extension/: units.py  units_format.py  utils_misc.py  visualization.py
astropy_extension/io/: __init__.py  csv.py  pylightxl.py
docs/dev-charter/: AI_COLLABORATION_RULES.md  AI_TOOL_SETUP.md  DOCS_STRUCTURE.md  INSTALL_CHECKLIST.md  README-jp.md
docs/dev-charter/.github/workflows/: check-charter.yml  update-version.yml
docs/dev-charter/topics/: GITHUB_SETTINGS.md  PROJECT_README_GUIDELINES.md  TEMPLATE_README_GUIDELINES.md
tests/: test_io.py  test_io_csv.py  test_visualization.py
